--- a/index.html
+++ b/index.html
@@ -3,91 +3,112 @@
 
 <head>
   <meta charset="utf-8">
-  <title>GifTastic</title>
+  <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>GifTastic Muppets!</title>
 </head>
 
 <body>
-  <div id="buttons-view"></div>
+  <h1 class="h1 d-flex justify-content-center banner"> </h1>
 
-  <!-- form created -->
-  <form id="topics-form">
-    <label for="topics-input">Add your favorite muppet, Whakka Whakka!</label>
-    <input type="text" id="topics-input"><br>
+  <div class="container">
 
-    <!-- Button triggers new movie to be added -->
-    <input id="add-topic" type="submit" value="Add a Muppet!">
-  </form>
+    <div id="buttons-view"></div>
 
-  <div class = "giphy-view"></div>
+    <div class="container">
+      <div class="row">
+        <!-- form created -->
+        <form id="topics-form">
+          <label for="topics-input">Add your favorite muppet, Whakka Whakka!</label>
+          <input type="text" id="topics-input"><br>
 
-  <!-- Gifs will go here -->
-  <div id = "giphy-view">
+          <!-- Button triggers new movie to be added -->
+          <input id="add-topic" type="submit" value="Add a Muppet!">
+        </form>
+      </div>
+    </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript">
 
-    var topics = ["kermit", "fozzie", "miss piggy", "gonzo", "scooter"];
+    <div class="giphy-view"></div>
 
-    function displayGiphyInfo(event) {
-      var topicName = $(this).attr("data-topics");
+    <!-- Gifs will go here -->
+    <div id="giphy-view">
+    </div>
 
-      // var APIKey = "GEvRmvkEVGBT1B8kIXSX2032E6Xus3aD";
-      var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + topicName + "&api_key=GEvRmvkEVGBT1B8kIXSX2032E6Xus3aD&limit=10";
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      var topics = ["kermit", "fozzie", "miss piggy", "gonzo", "scooter"];
 
-      $.ajax({
-        url: queryURL,
-        method: "GET"
-      }).then(function (response) {
-        console.log(response);
-        //Create a dive to hold all the gifs
-        var gifDiv = $("<div>");
-        //Create a heading to hold the rating
-        var rating = $("<h3>");
-        //Display the rating in the DOM
-        rating.text("Rating: " + response.rating);
-        console.log(rating);
-        //Create an attribute for the giphy
-        var img = $("<img>");
-        img.attr("src", response.downsized_small);
-        //append them all to under the buttons
-        $(".giphy-view").append(rating, img);
-      })
-    }
+      //AJAX QUERY ===> Set up ajax to query Giphy API and pull data into site 
+      function displayGiphyInfo(event) {
+        var topicName = $(this).attr("data-topics");
+        console.log(topicName);
 
-    //Create buttons for the topics in the existing topics array
-    function renderButtons() {
-      $("#buttons-view").empty();
-      for (var i = 0; i < topics.length; i++) {
-        // This code $("<button>") is all jQuery needs to create the beginning and end tag. (<button></button>)
-        var topicBtn = $("<button>");
-        // Adding a class
-        topicBtn.addClass("topics");
-        // Added a data-attribute
-        topicBtn.attr("data-topics", topics[i]);
-        // Provided the initial button text
-        topicBtn.text(topics[i]);
-        // Added the button to the HTML
-        $("#buttons-view").append(topicBtn);
+        // var APIKey = "GEvRmvkEVGBT1B8kIXSX2032E6Xus3aD";
+        var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + topicName +
+          "&api_key=GEvRmvkEVGBT1B8kIXSX2032E6Xus3aD&limit=10";
+        console.log(queryURL);
+
+        $.ajax({
+          url: queryURL,
+          method: "GET"
+        }).then(function (response) {
+          console.log(response);
+          //-->> need a for loop
+          //Create a dive to hold all the gifs
+          var gifDiv = $("<div>");
+          //Create a for loop to iterate through the array that is pulled from giphy
+          for (i = 0; i < topics.length; i++) {
+            //Create a heading to hold each rating as it comes through
+            var ratingDiv = $("<h3>");
+            //Display the rating in the DOM
+            ratingDiv.text("Rating: " + response.data[i].rating);
+            console.log(response.data[i].rating);
+            //Create an attribute for the giphy
+            var imgDiv = $("<img />");
+            img.attr("src", response.data[i].downsized_small);
+          }
+          //append them all to under the buttons
+          $(".giphy-view").append(ratingDiv, imgDiv);
+        })
       }
-    }
 
-    //Add buttons when a new topic is entered in the form
-    $("#add-topic").on("click", function (event) {
-      event.preventDefault(); //Prevent default to new screen
-      //Grab line of code from form box
-      var topicName = $("#topics-input").val().trim();
-      //Add the topicName to the original topics array
-      topics.push(topicName);
-      console.log(topicName);
-      //Call renderButtons function to make the buttons work
+      //CREATE BUTTONS ==>Create buttons for the topics in the existing topics array
+      function renderButtons() {
+        $("#buttons-view").empty();
+        for (var i = 0; i < topics.length; i++) {
+          // This code $("<button>") is all jQuery needs to create the beginning and end tag. (<button></button>)
+          var topicBtn = $("<button>");
+          // Adding a class
+          topicBtn.addClass("topics");
+          // Added a data-attribute
+          topicBtn.attr("data-topics", topics[i]);
+          // Provided the initial button text
+          topicBtn.text(topics[i]);
+          // Added the button to the HTML
+          $("#buttons-view").append(topicBtn);
+        }
+      }
+
+      //ADD BUTTONS ==> Add buttons when a new topic is entered in the form
+      $("#add-topic").on("click", function (event) {
+        event.preventDefault(); //Prevent default to new screen
+        //Grab line of code from form box
+        var topicName = $("#topics-input").val().trim();
+        //Add the topicName to the original topics array
+        topics.push(topicName);
+        console.log(topicName);
+        //Call renderButtons function to make the buttons work
+        renderButtons();
+      })
+
+      // Adding click event listeners to all elements with a class of "movie"
+      $(document).on("click", ".topics", displayGiphyInfo);
+
       renderButtons();
-    })
-
-    // Adding click event listeners to all elements with a class of "movie"
-    $(document).on("click", ".topics", displayGiphyInfo);
-   
-    renderButtons();
-  </script>
+    </script>
 
 </body>
 
