--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <h1 class="h1 d-flex justify-content-center banner"> </h1>
 
   <div class="container">
+    <h1 class="h1 d-flex justify-content-center banner"> </h1>
 
     <div id="buttons-view"></div>
 
@@ -56,22 +56,33 @@
           method: "GET"
         }).then(function (response) {
           console.log(response);
-          //-->> need a for loop
-          //Create a dive to hold all the gifs
-          var gifDiv = $("<div>");
+          
+          //Clear the gifDiv before you go through loop again
+          $("#giphy-view").empty();
           //Create a for loop to iterate through the array that is pulled from giphy
-          for (i = 0; i < topics.length; i++) {
+          for (var i = 0; i < topics.length; i++) {
+
+            //Create a div to hold all the gifs
+            var gifDiv = $("<div>");
+
             //Create a heading to hold each rating as it comes through
             var ratingDiv = $("<h3>");
-            //Display the rating in the DOM
-            ratingDiv.text("Rating: " + response.data[i].rating);
+            ratingDiv.text("Rating: " + response.data[i].rating); //Display the rating in the DOM
             console.log(response.data[i].rating);
+            gifDiv.append(ratingDiv);
+
             //Create an attribute for the giphy
-            var imgDiv = $("<img />");
-            img.attr("src", response.data[i].downsized_small);
+            var imgDiv = $("<img>");
+            imgDiv.class("image");
+            imgDiv.attr("src", response.data[i].images.fixed_height_small_still.url);
+            imgDiv.attr("src", response.data[i].images.fixed_height_small.url);
+
+            
+            //append to the gif DIV
+            gifDiv.append(imgDiv);
+
+            $("#giphy-view").append(gifDiv); //append the whole gifDiv to giphy-view
           }
-          //append them all to under the buttons
-          $(".giphy-view").append(ratingDiv, imgDiv);
         })
       }
 
@@ -105,7 +116,22 @@
       })
 
       // Adding click event listeners to all elements with a class of "movie"
-      $(document).on("click", ".topics", displayGiphyInfo);
+      $(document).on("click", ".topics", displayGiphyInfo, );
+
+     function pauseGif() {
+      var state = $(this).attr("data-state");
+
+      var animatedImage = $(this).attr("data-animate");
+      var stillImage = $(this).attr("data-still");
+
+      if (state === "still") {
+        $(this).attr("src", animatedImage);
+        $(this).attr("data-state", "animate");
+      } else {
+        $(this).attr("src", stillImage);
+        $(this).attr("data-state", "still");
+      }
+    };
 
       renderButtons();
     </script>
